<resources>
    <string name="app_name">移动巡检</string>


    <string name="text_menu_message">消息</string>
    <string name="text_menu_persons">联系人</string>
    <string name="text_menu_work">工作</string>
    <string name="text_menu_godo">待办</string>
    <string name="text_menu_mine">我的</string>


    <string name="home_1">设备管理</string>
    <string name="home_2">维修管理</string>
    <string name="home_3">抄表管理</string>
    <string name="home_4">维护保养</string>
    <string name="home_5">个人中心</string>

    <!-- 登录 -->
    <string name="activity_login">登录</string>
    <string name="login_input_user">请输入用户名</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_pwd">密码</string>
    <string name="login_reg">注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_button">登录</string>
    <string name="login_success">登录成功</string>

    <string name="progress_dialog">读取中...</string>

    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_release_label">放开刷新…</string>

    <string name="pull_text_line">我是有底线的</string>

    <string name="feedback_submit">提交</string>
    <string name="even_add">维修单创建</string>



    <string name="activity_photopicker">选择图片</string>
    <string name="picker_images">图片</string>
    <string name="picker_delete">删除</string>
    <string name="picker_done">完成</string>
    <string name="picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="picker_image_index">%1$d/%2$d</string>
    <string name="picker_undo">撤消</string>
    <string name="picker_deleted_a_photo">删除了一张图片</string>
    <string name="picker_confirm_to_delete">确认删除？</string>
    <string name="picker_yes">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_all_image">所有图片</string>
    <string name="picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="picker_image_count">%1$d张</string>

</resources>
